#119 Support region on delete
